<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Hwb</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="chwarae_play">Chwarae | Play</string>
    <string name="hwb_logo">Hwb logo</string>
    <string name="vocab_button">Vocab button</string>
    <string name="info_button">Info button</string>
    <string name="home_button">Home button</string>
    <string name="info_blurb">This app allows you to test yourself against the competitors on the Hwb word-game \'Gwenyn Geirfa\'. \n
Mae\'r App hon yn caniatáu i chi brofi eich hun yn erbyn y cystadleuwyr ar \'Gwenyn Geirfa\' - gêm eiriau Hwb. \n
  \n
You can choose to have just 20 seconds, to put yourself virtually \'on the sofa\', or you can play it without a time restriction. \n
Gallwch chi ddewis naill ai chwarae am 20 eiliad yn unig, fel tasech chi ar y soffa Hwb, neu chwarae\’r gêm heb boeni am yr amser. \n
  \n
When you\'ve finished, you can share your results on Twitter or Facebook, which will also help more people hear about Hwb&#8230;:-) \n
Ar ôl gorffen, gallwch chi rannu eich canlyniadau ar Twitter neu Facebook; bydd hyn yn help i dynnu sylw mwy o bobl at Hwb&#8230;:-) \n</string>

    <string-array name="vocab_string_array">
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
        <item>Vocab welsh - Vocab English</item>
    </string-array>

    <string name="gwybodaeth_information">Gwybodaeth | Information</string>
    <string name="geirfa_vocabulary">Geirfa | Vocabulary</string>
    <string name="fformat_amseri_timing_format">"Fformat Amseri? |\nTiming Format?"</string>
    <string name="agored">Agored</string>
    <string name="hawdd">Hawdd | Easy</string>
    <string name="soffa">Soffa | Sofa</string>
    <string name="cwestiwn_yn_gywir_questions_correctly">Cwestiwn yn gywir | Questions Correctly</string>
    <string name="fe_atebock_you_answered_">Fe ateboch: | You answered:</string>
    <string name="da_iawn_well_done_">Da iawn! | Well done!</string>
    <string name="start_time">00:00</string>
    <string name="stop_quiz">Stopio\'r cwis? | Stop quiz?</string>
    <string name="stop_quiz_yes">Ie | Yes</string>
    <string name="stop_quiz_no">Nage | No</string>
    <string name="app_id">137372506448475</string>
    <string name="postio_apos_r_canlyniad_drwy_gyfrwng_cymdeithasol_post_the_result_through_social_media_">Postio\'r canlyniad drwy gyfrwng cymdeithasol | Post the result through social media</string>

</resources>