<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hwb_logo"
        android:src="@drawable/hwblogo" />

    <Button
        android:id="@+id/playbutton"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:background="@drawable/normal_button"
        android:text="@string/chwarae_play" >
    </Button>

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/vocabicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/vocab_button"
            android:contentDescription="@string/vocab_button"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/infoicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/info_button" 
            android:contentDescription="@string/info_button"/>
    </RelativeLayout>

</RelativeLayout>